# performance-benchmark-stacks

./: .config.json  .gitignore  LICENSE  README.md  cleanup.sh  package.json  start.sh  start_all.sh  start_stack.sh  swagger.yaml
.github/workflows/: codeql.yml  scorecards-analysis.yml  secret-scanner.yml
benchmark_hub_agent/: .tool-versions  benchmark_hub_agent.service  mix.exs
benchmark_hub_agent/config/: dev.exs  prod.exs  test.exs
benchmark_hub_agent/lib/: application.ex
docs/: 3rdpartylicenses.txt  index.html  main.965c142c744c12c4e4d7.js  main.9ede9f0cca893fde9f15.js  main.a669cc2fe7629f8cd3b6.js  styles.77b52ea8cbade286e684.css
docs/assets/: results.json
elixir/plug-cowboy/: .gitignore  Dockerfile  mix.exs
go/gin/: .gitignore  Dockerfile  go.mod  go.sum
infra/: CloudFormation.yaml  Parameters.json  install_docker.sh
java/commons/: build.gradle
java/spring-boot-tomcat/: Dockerfile  build.gradle  settings.gradle
java/spring-boot-webflux/: Dockerfile  build.gradle  settings.gradle
nodejs/commons/: index.js  package-lock.json  package.json
nodejs/express/: Dockerfile  index.js  package-lock.json  package.json  setup.js  utils.js
nodejs/fastify/: Dockerfile  index.js  package-lock.json
nodejs/nestjs/: Dockerfile  package.json  (+1 more)
reports/: build.sh  start.sh
rust/actix/: Cargo.toml  Dockerfile
rust/actix/src/: hash.rs  hash_service.rs  looper.rs  percentage.rs
test-scenarios/: cipher-bcrypt.exs  cpu-affectation-10%.exs  hash-sha256.exs  health-check-cpu-affectation-10%.exs  health-check.exs  primes-first-100.exs  primes-first-10000.exs
(+186 files in other folders)
